# mathstuff

./: .gitignore  README.asciidoc  ideias.txt  ifs.m  sierpinsky.m  t1.m  w1.m
articles/015-ArduinoBlinkWithEvents/code/: Makefile  Makefile.am  README  configure.ac
articles/015-ArduinoBlinkWithEvents/code/ardev/: Makefile  Makefile.am
articles/015-ArduinoBlinkWithEvents/code/ardev-atm328p/: Makefile
articles/015-ArduinoBlinkWithEvents/code/ardev-atmega328p/: Makefile
articles/015-ArduinoBlinkWithEvents/code/ardev-atmega328p/main/ardev/tasks/atmega328p/: Atmega328pTaskService.c
articles/015-ArduinoBlinkWithEvents/code/ardev-atmega328p/main/ardev/ticks/atmega328p/: Atmega328pTickSource.h
articles/015-ArduinoBlinkWithEvents/code/ardev-core/: Makefile  Makefile.am
articles/015-ArduinoBlinkWithEvents/code/ardev-core/src/main/c/ardev/events/: Event.h  EventListener.c  EventListener.h  EventManager.c  EventManager.h  EventSource.c  EventSource.h  EventType.h
articles/015-ArduinoBlinkWithEvents/code/ardev-core/src/main/c/ardev/sys/: SysEventManager.c  SysEventManager.h  SysTaskService.c  SysTaskService.h  SysTickSource.c  SysTickSource.h
articles/015-ArduinoBlinkWithEvents/code/ardev-core/src/main/c/ardev/tasks/: CallbackTask.c  CallbackTask.h  CounterTaskService.c  CounterTaskService.h  Task.c  TaskScheduler.c  TaskScheduler.h  TaskService.c  TaskService.h
articles/015-ArduinoBlinkWithEvents/code/ardev-core/src/main/c/ardev/ticks/: CounterTickSource.c  CounterTickSource.h
articles/015-ArduinoBlinkWithEvents/code/ardev-test/: Makefile
articles/015-ArduinoBlinkWithEvents/code/ardev-test/src/test/c/ardev/events/: TestEventListener.c  TestEventListener.h  TestEventSource.c  TestEventSource.h
articles/015-ArduinoBlinkWithEvents/code/ardev-test/src/test/c/ardev/tasks/: TestClock.c  TestClock.h  TestTask.c  TestTask.h
articles/015-ArduinoBlinkWithEvents/code/ardev-test/src/test/cpp/ardev/events/: EventManagerTest.cpp
articles/015-ArduinoBlinkWithEvents/code/ardev-test/src/test/cpp/ardev/sys/: SysTaskServiceTest.cpp  SysTickSourceTest.cpp
articles/015-ArduinoBlinkWithEvents/code/ardev-test/src/test/cpp/ardev/tasks/: TaskSchedulerTest.cpp  TaskServiceTest.cpp
articles/015-ArduinoBlinkWithEvents/code/ardev-test/src/test/cpp/ardev/ticks/: CounterTickSourceTest.cpp
articles/015-ArduinoBlinkWithEvents/code/ardev/main/: helloutils.c
articles/015-ArduinoBlinkWithEvents/code/ardev/main/ardev/events/: Event.h  EventListener.h  EventManager.c  EventManager.h  EventSource.c  EventType.c  EventType.h
articles/015-ArduinoBlinkWithEvents/code/ardev/main/ardev/tasks/: CounterTaskService.h  Task.c  Task.h  TaskScheduler.c  TaskScheduler.h  TaskService.c  TaskService.h
articles/015-ArduinoBlinkWithEvents/code/ardev/main/ardev/ticks/: Clock.c  Clock.h  CounterClock.c  CounterClock.h  CounterTickSource.c  CounterTickSource.h  TickEventType.c  TickEventType.h
articles/015-ArduinoBlinkWithEvents/code/ardev/src/main/c/: helloutils.h
articles/015-ArduinoBlinkWithEvents/code/ardev/src/main/c/ardev/events/: Event.c  EventManager.h  EventSource.h
articles/015-ArduinoBlinkWithEvents/code/ardev/src/main/c/ardev/tasks/: CounterTaskService.c  TaskScheduler.c  TaskService.c
articles/015-ArduinoBlinkWithEvents/code/ardev/src/main/c/ardev/ticks/: CounterTickSource.c
articles/015-ArduinoBlinkWithEvents/code/ardev/src/test/cpp/: AllTests.cpp
articles/015-ArduinoBlinkWithEvents/code/ardev/test/ardev/events/: EventManagerTest.cpp  TestEventListener.c  TestEventListener.h  TestEventSource.c  TestEventSource.h
articles/015-ArduinoBlinkWithEvents/code/ardev/test/ardev/tasks/: CallbackTaskTest.cpp  TaskSchedulerTest.cpp  TaskServiceTest.cpp  TestClock.c  TestClock.h
articles/015-ArduinoBlinkWithEvents/code/ardev/test/ardev/ticks/: CounterClockTest.cpp  CounterTickSourceTest.cpp  TickEventTypeTest.cpp
articles/015-ArduinoBlinkWithEvents/code/ardevents/: Makefile.am
articles/015-ArduinoBlinkWithEvents/code/ardevents/include/ardevents/: EventListener.h  EventManager.h  EventSource.h  helloutils.h
articles/015-ArduinoBlinkWithEvents/code/ardevents/main/ardevents/: Clock.c  Clock.h  Event.c  Event.h  EventListener.c  EventListener.h  EventManager.c  EventManager.h  EventSource.h  EventType.c  EventType.h  Task.c  Task.h  TaskScheduler.c  TaskScheduler.h  TickEventType.c  TickEventType.h
articles/015-ArduinoBlinkWithEvents/code/ardevents/src/: helloutils.c
articles/015-ArduinoBlinkWithEvents/code/ardevents/src/ardevents/: EventManager.c  EventSource.c
articles/015-ArduinoBlinkWithEvents/code/ardevents/test/ardevents/: EventManagerTest.cpp  TestEventListener.c  TestEventListener.h  TestEventSource.c  TestEventSource.h  TickEventTypeTest.cpp
articles/015-ArduinoBlinkWithEvents/code/demos/: Makefile.am
articles/015-ArduinoBlinkWithEvents/code/demos/Blink/: Makefile
articles/015-ArduinoBlinkWithEvents/code/demos/Blink/src/main/c/: Blink.c
articles/015-ArduinoBlinkWithEvents/code/demos/Blink101/: Makefile
articles/015-ArduinoBlinkWithEvents/code/demos/Blink101/src/main/c/: Blink101.c  BlinkWithFade.c
articles/015-ArduinoBlinkWithEvents/code/demos/BlinkMany/: Makefile
articles/015-ArduinoBlinkWithEvents/code/demos/BlinkMany/src/main/c/: BlinkMany.c
articles/015-ArduinoBlinkWithEvents/code/demos/HelloWorld/: Makefile
articles/015-ArduinoBlinkWithEvents/code/demos/HelloWorld/src/main/c/: HelloWorld.c
articles/015-ArduinoBlinkWithEvents/code/demos/main/ardev/Blink/: BlinkMain.c
articles/015-ArduinoBlinkWithEvents/code/demos/src/: hello.c
articles/015-ArduinoBlinkWithEvents/code/demos/src/main/c/: hello.c
articles/015-ArduinoBlinkWithEvents/code/make/: app.make  defs.make  lib.make
articles/018-HaskelOnRaspberryPi/LedBlink/: LedBlink.cabal  Main.hs
articles/018-HaskelOnRaspberryPi/LedBlink/Blink/: Main.hs
articles/018-HaskelOnRaspberryPi/LedBlink/BlinkMany/: Main.hs
articles/018-HaskelOnRaspberryPi/LedBlink/api/: Gpio.hs
articles/018-HaskelOnRaspberryPi/LedBlink/cli/: Main.hs
doc/: t1.m
ifs/: sierpinski.m  sierpinsky.m
tools/: gs
(+95 files in other folders)
