#
#
#

AC_INIT([ardevents], 
        [1.0], 
        [jorgefranconunes@gmail.com])

AM_INIT_AUTOMAKE([
        -Wall
        -Werror
        foreign
        subdir-objects
])

#AM_PROG_AR
AC_PROG_CC
AC_PROG_RANLIB

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([
        Makefile
        ardevents/Makefile
        demos/Makefile
])

AC_OUTPUT
