name:                LedBlink

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

synopsis:            Blinking LED in a Raspberry Pi 3

homepage:            https://github.com/jorgefranconunes/mathstuff

license:             GPL-3

author:              jorgefranconunes <jorgefranconunes@gmail.com>

build-type:          Simple

cabal-version:       >=1.10


library
  -- Directories containing source files.
  hs-source-dirs: api

  exposed-modules:
    Gpio

  -- Other library packages from which modules are imported.
  build-depends: base >=4.6 && <4.7, directory

  -- Base language which the package is written in.
  default-language: Haskell2010


executable led
  -- Directories containing source files.
  hs-source-dirs: cli

  -- .hs or .lhs file containing the Main module.
  main-is: Main.hs

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:
    base >=4.6 && <4.7,
    directory,
    LedBlink

  -- Base language which the package is written in.
  default-language: Haskell2010
